@@ -305,8 +305,8 @@ describe('formatTimestamp', function() {
 	it('should return UTC time', function() {
 		var formatTimestamp;
 		formatTimestamp = $filter('formatTimestamp');
-		var milliseconds = Date.now();
-		expect(formatTimestamp(milliseconds)).toBe(new Date(milliseconds).toUTCString());
+		var milliseconds = new Date(0);
+		expect(formatTimestamp(milliseconds.getTime())).toBe("1970-01-01T00:00:00.000Z");
 	});
 });
 
