@@ -14,6 +14,8 @@ Changes
 Fixes
 -----
 
+ - Fix timestamp formatting in the console results.
+
 2017/07/10 1.4.0
 ================
 
